--- a/package.json
+++ b/package.json
@@ -21,8 +21,6 @@
     "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.2",
-    "@vercel/analytics": "^1.3.1",
-    "@vercel/speed-insights": "^1.0.12",
     "axios": "^1.7.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -35,6 +33,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-speech-to-text": "^0.8.0",
+    "react-loader-spinner": "^6.1.6",
+    "react-player": "^2.16.0",
     "recharts": "^2.12.7",
     "supports-color": "^9.4.0",
     "tailwind-merge": "^2.4.0",
